# WV2

./: Makefile  Makefile.am  Makefile.in  acinclude.m4  autogen.sh  config.h.in  config.status  configure  configure.in  libtool  wv2-config.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: DESIGN.html
doc/escher/: escher.html
src/: Makefile  Makefile.am  Makefile.am.orig  Makefile.in  Makefile.in.orig  fonts.cpp  global.h  lists.cpp  olestream.cpp  parser9x.cpp  parserfactory.cpp  styles.cpp.orig  textconverter.cpp  ustring.cpp  word97_generated.cpp  word97_generated.h
src/generator/: Makefile  Makefile.in
tests/: Makefile  Makefile.am  Makefile.in  handlertest.cpp  regression  test.h  word95_test.cpp  word97_test.cpp
